--- a/app/components/pre-header.scss
+++ b/app/components/pre-header.scss
@@ -10,6 +10,8 @@
   padding-block: 10px;
   background-color: #f7f7f7;
   column-gap: 0.5rem;
+  background-image: url("/assets/images/icons/connectwork.webp");
+  background-repeat: repeat;
 }
 
 .social-links {
@@ -23,6 +25,8 @@
   img {
     width: 20px;
     height: 20px;
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(1%)
+      hue-rotate(248deg) brightness(105%) contrast(101%);
   }
 }
 
